flapivor/tests/m3/hopix/typechecker/good/15-binary-mutually-rec-function.hopix
def fst : Int * Int -> Int (x, y) = snd (y, x)

and snd : Int * Int -> Int (x, y) = fst (x, y)

val main : Int = fst (3, 4)