flapivor/tests/m3/hopix/typechecker/bad/18-invalid-function-call-04.hopix
def f : String -> Int (x) = x

val main : String = f ("The Master")